Bug#34990 - Fixed the condition in which two different threads could get the same record number for an insert.